# haskellbook

./: README.md
chapter10/: section10.10.hs  section10.6.hs
chapter11/: cipher.hs  huttons.hs  phone.hs  section11.18.hs  section11.6.hs  section11.9.hs
chapter12/: bintree.hs  eithers.hs  maybes.hs  naturals.hs  stringproc.hs  unfolds.hs  wordval.hs
chapter13/: person.hs
chapter13/cipher/: README.md  cipher.cabal
chapter13/cipher/src/: Cipher.hs  Main.hs
chapter13/hangman/: LICENSE  hangman.cabal
chapter13/hangman/src/: Main.hs
chapter13/hello/: hello.cabal
chapter13/hello/exe/: Main.hs
chapter13/hello/src/: DogsRule.hs  Hello.hs
chapter13/palindrome/: README.md  palindrome.cabal
chapter13/palindrome/src/: Main.hs
chapter14/arbitrary/: Arbitrary.hs  arbitrary.cabal
chapter14/cipher/: Cipher.hs  Tests.hs  cipher.cabal
chapter14/hangman/: hangman.cabal
chapter14/hangman/src/: Main.hs
chapter14/hangman/tests/: Tests.hs
chapter14/morse/: README.md  morse.cabal
chapter14/morse/app/: Main.hs
chapter14/morse/src/: Morse.hs
chapter14/morse/tests/: Tests.hs
chapter14/mult/: Multiplication.hs  multiplication.cabal
chapter14/quickcheck/: Lib.hs  Tests.hs  quickcheck.cabal
chapter14/wordnumber/: Tests.hs  WordNumber.hs  wordnumber.cabal
chapter15/: section15.10.hs  section15.12.hs  section15.15.8.hs  section15.15.hs
chapter16/: section16.10.hs  section16.17.hs  section16.9.hs
chapter17/: section17.5.hs  section17.8.hs  section17.9.hs
chapter18/: section18.4.hs  section18.6.hs  section18.7.hs  split.hs
chapter19/: shawty.cabal
chapter19/app/: Main.hs
chapter20/: section20.5.hs  section20.6.hs
chapter21/: section21.12.hs
chapter22/: section22.11.hs  section22.2.hs  section22.5.hs  section22.6.hs  section22.7.hs
chapter23/: section23.5.hs  section23.6.hs  section23.7.hs  section23.8.hs
chapter24/: parsing.hs  section24.10.hs  section24.11-1.hs  section24.11-5.hs  section24.11-6-7-8-9.hs  section24.11.hs  section24.3.hs  section24.4.hs  section24.6.hs  section24.7.hs  section24.9.hs  section24.9b.hs  shows.hs
chapter25/: section25.4-5-6.hs  section25.6.hs  section25.8.hs
chapter26/: section26.10.hs  section26.11.hs  section26.14.hs  section26.2.hs  section26.3.hs  section26.4.hs  section26.5.hs  section26.8.hs  section26.9.hs
chapter26/hitcounter/: .gitignore  ChangeLog.md  README.md  package.yaml
chapter26/hitcounter/app/: Main.hs
chapter26/morra/: .gitignore  ChangeLog.md  README.md  package.yaml
chapter26/morra/app/: Main.hs
chapter26/morra/src/: Common.hs  Morra.hs  SinglePlayer.hs  TwoPlayer.hs
chapter26/myscotty/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml
chapter26/myscotty/app/: Main.hs
chapter27/: section27.14-1.hs  section27.14-2.hs  section27.14-3.hs  section27.14-4.hs  section27.5-ex.hs  section27.5.hs  section27.9.hs
chapter28/: section28.10-1.hs  section28.10-2.hs  section28.2.hs  section28.3-2.hs  section28.3-2.prof  section28.3-2.ps  section28.3.hs  section28.3.prof  section28.4-2.hs  section28.4-2.prof  section28.4-2.ps  section28.4-3.hs  section28.4-3.prof  section28.4-3.ps  section28.4.hs  section28.4.prof  section28.4.ps  section28.5-6.hs  section28.7.hs  section28.8-2.hs  section28.8-3.hs  section28.8-4.hs  section28.8-5.hs  section28.8-5.ps  section28.8.hs  section28.9-2.hs  section28.9-3.hs  section28.9.hs  section28.9.ps
chapter29/: section29.4.hs  section29.5.hs  section29.7.hs  section29.8.hs
chapter29/cipher/: README.md  cipher.cabal  stack.yaml
chapter29/cipher/src/: Cipher.hs  Main.hs
chapter30/: section30.2.hs  section30.3.hs  section30.4.hs  section30.5.hs  section30.6.hs  section30.7-2.hs  section30.7.hs  section30.8.hs  section30.9-2.hs  section30.9.hs
chapter31/fingerd/: .gitignore  README.md  fingerd.cabal  stack.yaml
chapter31/fingerd/src/: Database.hs  Debug.hs  Main.hs
chapter4/: section4.3.hs  section4.9.hs
chapter5/: arith3broken.hs  section5.5.hs  section5.8.hs  sing.hs  type-knwon-do.hs
chapter6/: section6.14.hs  section6.5.hs
chapter7/: arith4.hs  section7.11.hs  section7.3.hs  section7.4.hs  section7.5.hs  section7.7.hs
chapter8/: section8.6.hs  wordnumber.hs
chapter9/: cipher.hs  section9.10.hs  section9.11.hs  section9.12.hs  section9.5.hs  section9.6.hs  section9.7.hs  section9.9.hs
