name:           shawty
version:        0.1.0.0
synopsis:       URI shortener
homepage:       http://github.com/
license:        BSD3
author:         Sergio de Carvalho
copyright:      2018, Sergio de Carvalho
category:       Web
build-type:     Simple
cabal-version:  >=1.10

executable shawty
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -threaded
  build-depends:    base >= 4.7 && < 5
                  , bytestring
                  , hedis
                  , mtl
                  , network-uri
                  , random
                  , scotty
                  , semigroups
                  , text
                  , transformers
