name:                palindrome
version:             0.1.0.0
homepage:            https://github.com/scarvalhojr/learning
license:             BSD3
license-file:        LICENSE
author:              Sergio de Carvalho
copyright:           2017 Sergio de Carvalho
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable palindrome
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
