name:                arbitrary
version:             0.1.0.0
author:              Sergio de Carvalho
copyright:           2017 Sergio de Carvalho
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Arbitrary
  hs-source-dirs:      .
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
