name:                morse
version:             0.1.0.0
synopsis:            Morse Code
license:             BSD3
license-file:        LICENSE
author:              Sergio de Carvalho
copyright:           2017 Sergio de Carvalho
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morse
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck

executable morse
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , morse
                     , QuickCheck

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs
  build-depends:       base
                     , containers
                     , morse
                     , QuickCheck
  ghc-options:         -Wall -fwarn-tabs -fno-warn-orphans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/morse
