name:                multiplication
version:             0.1.0.0
author:              Sergio de Carvalho
copyright:           2017 Sergio de Carvalho
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Multiplication
  hs-source-dirs:      .
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
