name:                cipher
version:             0.1.0.0
synopsis:            Vigenere cipher utility
homepage:            https://github.com/scarvalhojr/haskellbook
license:             BSD3
license-file:        LICENSE
author:              Sergio de Carvalho
copyright:           2017 Sergio de Carvalho
category:            Cipher
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Cipher
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cipher
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Cipher
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-generic
                     , cipher
