name:                fingerd
version:             0.1.0.0
synopsis:            Simple finger daemon
description:         Please see README.md
homepage:            https://github.com/scarvalhojr/haskellbook
license:             BSD3
license-file:        LICENSE
author:              Sergio de Carvalho
copyright:           2018 Sergio de Carvalho
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Database
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text

executable fingerd-debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
